Durchschnittlicher Lagerbestand hinzugefuegt

--- a/bwl02-formeln.tex
+++ b/bwl02-formeln.tex
@@ -141,6 +141,8 @@ ROI \footnote{Return-On-Invest} = $\cfrac{Gewinn}{Umsatz} * \cfrac{Umsatz}{Kapit
 \subsection{Servicegrad} 
 Servicegrad = $\cfrac{Anzahl~befriedigter~Bedarfsanforderungen}{Anzahl~Bedarfsanforderungen}$ 
 
+\subsection{Durchschnittlicher Lagerbestand} 
+Durchschnittlicher Lagerbestand = $\cfrac{Anfangsbestand~+~Endbestand}{2}$ 
 
 \subsection{Umschlagshäufigkeit}
 Umschlagshäufigkeit = $\cfrac{Verbauch~pro~Periode}{Durchschnittlicher~Lagerbestand}$
