Texterweiterung bei Erloes und Erfolg

--- a/bwl02-formeln.tex
+++ b/bwl02-formeln.tex
@@ -87,12 +87,12 @@ Formelsammlung
 Eigenkapital = Aktiva - Passiva
 \subsection{Gesamtkosten}
 Gesamtkosten = Fixkosten + (Menge * variable Stückkosten)
-\subsection{Erfolg}
+\subsection{Erfolg (Gewinn/Verlust)}
 Erfolg = Ertrag - Aufwand
 \subsubsection{Erfolg je Kostenträger}
 Erfolg je Kostenträger = Erlöse - Selbstkosten 
-\subsection{Erlös}
-Erlös = Menge * Verkaufspreis
+\subsection{Erlös / Umsatz}
+Erlös / Umsatz = Menge * Verkaufspreis
 \subsection{Deckungsbeitrag}
 Deckungsbeitrag = Erlös - variable Kosten
 \subsection{BEP} 
